include new pages

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,20 +1,23 @@
 project:
   type: website
   output-dir: docs
+  resources: 
+    -  "files/"
 
 website:
   title: "Sebastian Hanika"
   navbar:
     left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
+      - href: research.qmd
+        text: research
+      - href: teaching.qmd
+        text: teaching
 
 format:
   html:
-    theme: cosmo
-    css: styles.css
-    toc: true
+    theme: [litera, styles.scss]
+    toc: false
+
 
 
 
